# bmi

./: .gitignore  Cargo.toml  makefile
.cargo/: config
src/: bmi.rs  extensions.rs  main.rs
