[package]
name = "BMI"
version = "0.1.0"
authors = ["doesnt"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
openssl-sys = "0.9"
openssl = "0.10"